# obmc-dbus-benchmarks

./: README.md  meson.build  run-dbus-benchmark.sh  sdbusplus-server.cpp
c/: meson.build  sdbus-client.c  sdbus-server.c  sdbusplus-client.cpp
rust/: Cargo.toml
rust/src/: dbusrs-server.rs
src/: common.rs  dbusrs-client.rs  zbus-client.rs  zbus-server.rs
